--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -23,8 +23,7 @@
     "y_trains = []\n",
     "dataset_names = sorted(\n",
     "    [name for name in os.listdir(\"./Competition_data\") if not name.startswith('.')],\n",
-    "    key=lambda x: int(x.split('_')[1]) if x.startswith(\"Dataset_\") else float('inf')\n",
-    ")\n",
+    "    key=lambda x: int(x.split('_')[1]) if x.startswith(\"Dataset_\") else float('inf'))\n",
     "\n",
     "# 加載所有訓練資料\n",
     "for folder_name in dataset_names:\n",
