--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -10,7 +10,7 @@
     "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
